syntax = "proto3";

package auth;

option go_package = "./protos/auth;auth";

service Auth {
   rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
   rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}


message RegisterUserRequest {
   string username = 1;
   string password = 2;
   string email = 3;
}


message RegisterUserResponse {
   bool success = 1;
   string message = 2;
   string token = 3;  
}


message LoginUserRequest  {
   string email = 1;
   string password = 2;
}


message LoginUserResponse {
   bool success = 1;
   string message = 2;
   string token = 3;  
}